test/arrays/deitz/part7/test_domain_mixed_dim_types.good
test_domain_mixed_dim_types.chpl:1: error: idxType varies among domain's dimensions
